--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,29 @@
-openai==0.27.0
-requests==2.28.2
-PyPDF2==2.11.0
-streamlit==1.22.0
-groq
+requests==2.32.3
+streamlit==1.41.1
+PyPDF2
+pytesseract
+Pillow
+pytz
+python-dotenv
+openai
+pydub
+transformers
+gTTS
+numpy
+openai
+google-generativeai
+torch
+datasets==2.4.0
+rouge-score
+
+
+
+
+
+
+
+
+
+
+
+
